--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   ],
   "author": "Carl Kittelberger <icedream2k9@die-optimisten.net>",
   "license": "GPL-3.0+",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/icedream/ts3bot-control.git"
+  },
   "dependencies": {
     "express": "^4.13.3",
     "iced-coffee-script": "^108.0.8",
