--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.3.0",
   "description": "Allows running TeamSpeak3 as a bot for all kinds of media (local music/videos/streams/YouTube/...) without the need for a real GUI to exist.",
   "main": "app.js",
+  "bin": {
+    "ts3bot": "app.js"
+  },
   "keywords": [
     "teamspeak",
     "teamspeak3",
