--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "iced-coffee-script": "^108.0.8",
     "merge": "^1.2.0",
     "mkdirp": "^0.5.1",
+    "named-regexp": "^0.1.1",
     "nconf": "^0.7.2",
     "npm-which": "^2.0.0",
+    "parse-duration": "^0.1.1",
     "password-generator": "^2.0.1",
+    "pretty-ms": "^2.1.0",
     "querystring": "^0.2.0",
     "request": "^2.61.0",
     "simple-ini": "^1.0.3",
