Integrate coffeelint into the project.
Known issues:

- Currently a dummy transform is needed to apply a different syntax parser (iced-coffee-script-3 in our case) which is situated in `util/dummy-transform`. It's installed as a devDependency.

--- a/package.json
+++ b/package.json
@@ -63,6 +63,13 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-es2017-node7": "^0.5.2",
+    "coffeelint": "^1.16.0",
+    "coffeelint-config-groupon": "^4.1.0",
+    "coffeelint-forbidden-keywords": "~0.1.1",
+    "coffeelint-no-mocha-only": "^1.0.0",
+    "coffeelint-use-strict": "^1.0.0",
+    "coffeescope2": "~0.4.2",
+    "dummy-transform": "file:./util/dummy-transform",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.2.0",
