--- a/package.json
+++ b/package.json
@@ -81,5 +81,40 @@
   "engineStrict": true,
   "engines": {
     "node": ">= 7.6.0"
+  },
+  "resolutions": {
+    "debug": "2.6.7",
+    "ms": "2.0.0",
+    "minimist": "1.2.0",
+    "async": "1.5.2",
+    "string-width": "2.0.0",
+    "is-fullwidth-code-point": "2.0.0",
+    "wordwrap": "1.0.0",
+    "assert-plus": "1.0.0",
+    "nopt": "4.0.1",
+    "npmlog": "4.1.0",
+    "rimraf": "2.6.1",
+    "semver": "5.3.0",
+    "tar": "2.2.1",
+    "are-we-there-yet": "1.1.4",
+    "gauge": "2.7.4",
+    "readable-stream": "2.2.9",
+    "isarray": "1.0.0",
+    "string_decoder": "1.0.0",
+    "strip-json-comments": "2.0.1",
+    "glob": "7.1.1",
+    "once": "1.4.0",
+    "fstream": "1.0.11",
+    "graceful-fs": "4.1.11",
+    "uid-number": "0.0.6",
+    "lodash": "4.17.4",
+    "source-map-support": "0.4.15",
+    "source-map": "0.5.6",
+    "traverse": "0.3.9",
+    "user-home": "2.0.0",
+    "resolve": "1.3.3",
+    "doctrine": "2.0.0",
+    "estraverse": "4.2.0",
+    "acorn": "5.0.3"
   }
 }
