Synchronize .dockerignore with .gitignore.

--- a/.dockerignore
+++ b/.dockerignore
@@ -24,6 +24,10 @@ build/Release
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules
 
+# Built files
+src.js
+dist
+
 ###
 
 .git*
